--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import '~bulma/bulma';
+@import '~bulma';
 @import '~bulma/sass/utilities/initial-variables';
 
 $perx-primary: #1F1F1F;
